modified:   dist/app.js 	modified:   dist/app.js.map 	modified:   header.html 	modified:   pgp.txt 	modified:   prestyles.css 	modified:   styles1.css 	modified:   styles2.css

--- a/prestyles.css
+++ b/prestyles.css
@@ -8,7 +8,7 @@ html, body {
 
 pre {
   overflow: auto;
-  max-height: 85%;
+  max-height: 93.1vh;
   width: 100%;
   border-radius: 1px; /* Prevents bad clipping in Chrome */
   font-size: 0.875rem; /* Smaller font size for code */
