--- a/styles1.css
+++ b/styles1.css
@@ -1,6 +1,6 @@
 
 /**
- * That markdown on the left doesn't look great. Let's render it.
+ * That plaintext on the left doesn't look great. Let's render it.
  */
 
 #work-text.flipped {
