--- a/styles2.css
+++ b/styles2.css
@@ -35,7 +35,7 @@
  * That's better.
  *
  * This next part is a portfolio site. Where you can see some of my work
- * and view my resume. The site is built with HTML, CSS, and JavaScript.
+ * and view my projects and resume. The site is built using Astro.
  * Everything is custom coded besides a little jQuery. I included some 
  * EasterEggs. See if you can find them on the main page by clicking around. 
  */
