--- a/styles3.css
+++ b/styles3.css
@@ -35,7 +35,7 @@ pre:hover {
 */
 
 *.value {
-  text-shadow: 0px 1px 7px rgb(196, 196, 196);
+  text-shadow: 0px 0px 0x rgb(196, 196, 196);
 } 
  
 pre:hover {
